# Client-Server-Interaction

./: CMakeLists.txt  ClientServer.hpp  README  README.md  build.cmd
client/: CMakeLists.txt
client/Inc/: client_handlers.hpp  client_module.hpp  client_session.hpp  connection.hpp
client/Src/: client_handlers.cpp  client_process.cpp  client_session.cpp  connection.cpp  main.cpp
client/client_session/: client_session.cpp  client_session.hpp  startup_client.cpp
common/: TaskProcessor.hpp
common/Inc/: SendReceive.hpp  TaskProcessor.hpp  TaskWrapped.hpp
common/Src/: SendReceive.cpp  TaskProcessor.cpp  TaskWrapped.cpp
modules/asio_network/: CMakeLists.txt
modules/asio_network/Inc/: network_module.hpp
modules/asio_network/Inc/network/: listen_connect.hpp  send_receive.hpp  socket_data.hpp  utility.hpp
modules/asio_network/Src/: listen_connect.cpp  send_receive.cpp  socket_data.cpp
modules/asio_network/socket_data/: socket_data.cpp  socket_data.hpp  utility.hpp
modules/asio_network/socket_data/Inc/: socket_data.hpp  utility.hpp
modules/asio_network/socket_data/Src/: socket_data.cpp
modules/asio_network/socket_io/: listen_connect.cpp  listen_connect.hpp  send_receive.cpp  send_receive.hpp
modules/asio_network/socket_io/Inc/: listen_connect.hpp  network.hpp  send_receive.hpp
modules/asio_network/socket_io/Src/: listen_connect.cpp  send_receive.cpp
modules/common/: CMakeLists.txt
modules/common/Inc/: protocol.hpp
modules/common/Src/: protocol.cpp
modules/common/shared/: CMakeLists.txt
modules/common/shared/log/: logger.cpp  logger.hpp
modules/common/shared/protocol/: protocol.cpp  protocol.hpp
modules/common/tests/: CMakeLists.txt  protocol.cpp
network_lib/network_io/Inc/: sendReceive.hpp  socketData.hpp
network_lib/network_io/Src/: sendReceive.cpp  socketData.cpp
network_lib/tasks/Inc/: taskProcessor.hpp  taskWrapped.hpp
network_lib/tasks/Src/: taskProcessor.cpp  taskWrapped.cpp
scripts/: build_unix.sh  build_win.cmd  install_boost.sh
server/: CMakeLists.txt  main.cpp
server/Inc/: ConnectionData.hpp  chat_lobby.hpp  chat_room.hpp  chat_user.hpp  database.hpp  listen.hpp  server_handlers.hpp  server_module.hpp  server_session.hpp
server/Src/: ConnectionData.cpp  chat_lobby.cpp  chat_room.cpp  chat_user.cpp  database.cpp  listen.cpp  main.cpp  server_handlers.cpp  server_process.cpp  server_session.cpp
server/acceptor/: acceptor.cpp  acceptor.hpp  interface.hpp  startup_server.cpp
server/channel/: channel.cpp  channel.hpp  channels.cpp  channels.hpp  chat_member.hpp  users.cpp  users.hpp
server/channels/: channel.cpp  channel.hpp  chat_lobby.cpp  chat_lobby.hpp  i_channels.hpp  user_account.hpp
server/connection/: connections_manager.cpp  connections_manager.hpp
server/connections/: connection.cpp  connection.hpp  connections.cpp  connections.hpp  connections_manager.cpp  connections_manager.hpp  startup_server.cpp
server/database/: database.cpp  database.hpp
server/lobby/: main_lobby.cpp  main_lobby.hpp
server/temp/: chat_room.cpp  server_module.hpp
